# funda-connect

./: .env.example  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  booking.py  consent.py  curriculum.py  notification.py  parent.py  payment.py  review.py  teacher.py  user.py
backend/app/schemas/: account.py  auth.py  booking.py  notification.py  parent.py  reference_data.py  review.py  teacher.py
backend/app/scripts/: promote_admin.py
backend/app/seeds/: subjects.py
backend/app/services/: account_lifecycle.py  audit.py  auth_tokens.py  consent.py  email.py  file_validation.py  google_oauth.py  learner_progress.py  malware_scan.py  notifications.py  observability.py  prepaid_series.py  push.py  rate_limits.py  receipts.py  reference_data.py  refunds.py  reports.py  scheduling.py  sms.py  storage.py  teacher_search.py  verification_documents.py  video.py
backend/app/tasks/: account_lifecycle.py  celery_app.py  lessons.py  notifications.py  payouts.py  verification.py
backend/migrations/: env.py
backend/migrations/versions/: 574066609d47_initial_schema.py  5d4fb6b9b1a8_add_booking_hold_expiry.py  (+13 more)
backend/tests/: conftest.py  test_account_lifecycle.py  test_audit.py  test_auth_tokens.py  test_config.py  test_consent.py  test_deps.py  test_file_validation.py  test_google_oauth.py  test_learner_progress.py  test_malware_scan.py  test_notifications.py  test_observability.py  test_prepaid_series.py  test_push.py  test_rate_limits.py  test_receipts.py  test_reference_data.py  test_refunds.py  test_reports.py  test_scheduling.py  test_security_headers.py  test_sms.py  test_teacher_search.py  test_verification_documents.py
(+98 files in other folders)
