[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "fundaconnect-backend"
version = "0.1.0"
description = "FundaConnect API — connecting SA teachers with homeschooling families"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.9",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "flower>=2.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Emails
    "emails>=0.6.0",
    "jinja2>=3.1.0",

    # Storage (S3)
    "boto3>=1.34.0",

    # Search
    "meilisearch>=0.31.0",

    # Utilities
    "structlog>=24.0.0",
    "python-slugify>=8.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pywebpush>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-python-jose",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]
